[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "panther"
version = "0.0.0"
authors = [{ name = "Tim Hsu", email = "maochindada@gmail.com" }]
description = "pre-compiled protobuf for trading system"
readme = "README.md"
requires-python = ">=3.11"
classifiers = ["Programming Language :: Python :: 3"]

[tool.hatch.build.targets.wheel]
packages = ["panther"]

[project.urls]
Homepage = "https://github.com/Chindada/panther"
Issues = "https://github.com/Chindada/panther/issues"
